stopped cards from cutting off at very bottom

--- a/src/css/restaurantchoice.css
+++ b/src/css/restaurantchoice.css
@@ -16,8 +16,8 @@
 
 .card-container {
   overflow: auto;
-  white-space: nowrap;
   position: fixed;
+  height: 90%;
 }
 
 .card {
